--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-
-<!-- 百度统计 -->
+<!-- 百度统计(这个统计不是我的，大家使用的时候删掉即可) -->
 <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?272119dae6cce7e3ded69c4a57f828d1";
+  hm.src = "";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
